<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/empty_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <com.example.livestream_update.Ringme.ProgressLoading
        style="@style/ProgressLoading"
        android:layout_width="@dimen/progress_size"
        android:layout_height="@dimen/progress_size"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icEmpty"
        android:layout_width="@dimen/dimen50dp"
        android:layout_height="@dimen/dimen50dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:visibility="gone"
        tools:visibility="visible"
        app:srcCompat="@drawable/rm_ic_empty_mv" />

    <TextView
        android:id="@+id/tvEmptyTitle"
        style="@style/V5_List_Tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/dimen25dp"
        android:text="@string/not_find"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvEmptyDes"
        style="@style/V5_List_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/padding_5"
        android:maxLines="2"
        android:text="@string/not_found_search_hint"
        android:visibility="gone" />

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/margin_more_content_15"
        android:text="@string/e601_error_but_undefined"
        android:textColor="@color/text_message_time"
        android:textSize="@dimen/kakoak_text_size_level_3"
        style="@style/V5_Body_Text_Regular"
        android:visibility="gone"
        tools:visibility="visible" />


    <com.example.livestream_update.Ringme.RoundTextView
        android:id="@+id/btnUpload"
        style="@style/V5_Button_Submit"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/dimen15dp"
        android:clickable="true"
        android:text="@string/post_video"
        android:visibility="gone"
        tools:ignore="TextSizeCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/empty_retry_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/paddingDefault"
        android:text="@string/empty_no_data"
        android:textColor="@color/text_ab_title"
        android:textSize="@dimen/kakoak_text_size_level_3"
        style="@style/V5_Body_Text_Regular"
        android:visibility="gone" />

    <TextView
        android:id="@+id/empty_retry_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="60dp"
        android:paddingTop="@dimen/margin_more_content_23"
        android:paddingRight="60dp"
        android:paddingBottom="@dimen/margin_more_content_23"
        android:text="@string/empty_no_internet"
        android:textAllCaps="true"
        android:textColor="@color/text_ab_desc"
        android:textSize="@dimen/kakoak_text_size_level_1_5"
        style="@style/V5_Body_Text_Regular"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/empty_retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_more_content_10"
        android:src="@drawable/rm_ic_reload"
        android:visibility="gone" />

</LinearLayout>